--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
+    "lint:fix": "turbo run lint -- --fix",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "test": "turbo run test",
     "test:coverage": "turbo run test:coverage",
+    "clean": "turbo run clean && rm -rf .turbo node_modules packages/*/node_modules apps/*/node_modules",
     "changeset": "changeset",
     "release": "changeset publish",
     "commit": "cz",
