--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -6,6 +6,6 @@ contact_links:
   - name: 📖 Documentation
     url: https://csp-kit.eason.ch/docs
     about: Check our comprehensive documentation and guides
-  - name: 🔧 CLI Help
-    url: https://github.com/eason-dev/csp-kit/blob/main/packages/cli/README.md
-    about: Get help with the CSP CLI tool
+  - name: 🌐 Web Interface
+    url: https://csp-kit.eason.ch
+    about: Try the interactive CSP generator
