--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@csp-kit/cli",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Command-line tool for managing CSP service definitions and data updates",
   "type": "module",
   "main": "./dist/index.js",
@@ -25,9 +25,9 @@
     "dev": "tsup --watch",
     "lint": "eslint . --max-warnings 0",
     "check-types": "echo 'CLI needs to be updated for new architecture' && exit 0",
-    "prepare": "npm run build",
-    "prepack": "npm run build",
-    "prepublishOnly": "npm run lint && npm run check-types"
+    "prepare": "pnpm run build",
+    "prepack": "pnpm run build",
+    "prepublishOnly": "pnpm run lint && pnpm run check-types"
   },
   "keywords": [
     "csp",
@@ -53,8 +53,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/",
-    "provenance": true
+    "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
     "@csp-kit/data": "workspace:*",
