--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@csp-kit/data",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "Service definitions and CSP mappings database for csp-kit",
   "type": "module",
   "main": "./dist/index.js",
@@ -35,9 +35,9 @@
     "lint": "eslint . --max-warnings 0",
     "check-types": "tsc --noEmit",
     "validate": "echo 'Data validation passed'",
-    "prepare": "npm run build",
-    "prepack": "npm run build && npm run validate",
-    "prepublishOnly": "npm run lint && npm run check-types",
+    "prepare": "pnpm run build",
+    "prepack": "pnpm run build && pnpm run validate",
+    "prepublishOnly": "pnpm run lint && pnpm run check-types",
     "publish:npm": "npm publish --provenance=false"
   },
   "keywords": [
