--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@csp-kit/generator",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "Generate Content Security Policy headers for popular web services and libraries",
   "type": "module",
   "main": "./dist/index.js",
@@ -24,9 +24,9 @@
     "check-types": "tsc --noEmit",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
-    "prepare": "npm run build",
-    "prepack": "npm run build && npm run test -- --run",
-    "prepublishOnly": "npm run lint && npm run check-types"
+    "prepare": "pnpm run build",
+    "prepack": "pnpm run build && pnpm run test -- --run",
+    "prepublishOnly": "pnpm run lint && pnpm run check-types"
   },
   "keywords": [
     "csp",
