--- a/.npmrc
+++ b/.npmrc
@@ -14,3 +14,7 @@ audit-level=moderate
 # Development settings
 engine-strict=true
 auto-install-peers=true
+
+# CI Authentication (only used in CI environment)
+# The auth token is set via NODE_AUTH_TOKEN environment variable
+# //registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
