--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@commitlint/config-conventional": "19.8.1",
     "commitizen": "4.3.1",
     "cz-conventional-changelog": "3.3.0",
+    "globals": "16.3.0",
     "husky": "9.1.7",
     "lint-staged": "16.1.2",
     "prettier": "^3.6.0",
