--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,7 +21,6 @@
   "dependencies": {
     "@csp-kit/data": "workspace:*",
     "@csp-kit/generator": "workspace:*",
-    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -48,8 +47,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-syntax-highlighter": "15.6.1",
-    "tailwind-merge": "^2.6.0",
-    "zod": "^4.0.5"
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@playwright/test": "1.54.1",
