--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,12 +47,14 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-syntax-highlighter": "15.6.1",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@playwright/test": "1.54.1",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/postcss": "4.1.11",
+    "@tailwindcss/vite": "4.1.11",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
     "@types/node": "^24.0.14",
@@ -60,11 +62,10 @@
     "@types/react-dom": "19.1.1",
     "@vitejs/plugin-react": "4.7.0",
     "@vitest/coverage-v8": "^2.1.9",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.29.0",
     "jsdom": "26.1.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.8.2",
     "vitest": "^2.1.9"
