--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@changesets/cli": "2.29.5",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
+    "@tailwindcss/vite": "4.1.11",
     "commitizen": "4.3.1",
     "cz-conventional-changelog": "3.3.0",
     "globals": "16.3.0",
@@ -34,6 +35,7 @@
     "lint-staged": "16.1.2",
     "prettier": "^3.6.0",
     "prettier-plugin-tailwindcss": "^0.6.13",
+    "tailwindcss": "4.1.11",
     "turbo": "^2.5.4",
     "typescript": "5.8.2"
   },
