chore(root): remove deprecated npm configurations from npmrc

--- a/.npmrc
+++ b/.npmrc
@@ -1,16 +1,8 @@
-# NPM Configuration
-registry=https://registry.npmjs.org/
-access=public
-fund=true
-save-exact=true
-
-# Workspace settings
-link-workspace-packages=true
-shared-workspace-lockfile=true
-
-# Security settings
-audit-level=moderate
-
-# Development settings
+# Engine enforcement - useful for ensuring Node.js version compatibility
 engine-strict=true
-auto-install-peers=true
+
+# Publishing settings (only needed if you publish packages)
+access=public
+
+# Optional: Exact versions instead of ranges (personal preference)
+# save-exact=true
