--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
-  "globalEnv": ["NODE_ENV", "NEXT_PUBLIC_GA_MEASUREMENT_ID"],
+  "globalEnv": ["NODE_ENV", "NEXT_PUBLIC_GA_MEASUREMENT_ID", "VERCEL_ENV"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
